# mac-app-bundleid

./: README.md  package.json  setup.cfg  setup.py
scripts/: app-bundleid
tests/mac-app-bundleid/examples/: Finder.sh
